# website

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  style.css  zola.toml
.github/: dependabot.yaml
.github/actions/setup-dioxus/: action.yaml
.github/actions/setup-node/: action.yaml
.github/actions/setup-zola/: action.yaml
.github/workflows/: cd.yaml  ci.yaml  gh-pages.yaml
content/: privacy.md  terms.md
locales/: en.ftl  es.ftl
src/: app.rs  components.rs  constants.rs  layout.rs  main.rs
src/pages/: home_page.rs  mod.rs  privacy_page.rs  terms_page.rs
static/: ads.txt
templates/: base.html  index.html  page.html
