[package]
name = "website"
version = "0.0.0-alpha.0"
edition = "2024"
authors = ["Javier E. <jaedns@gmail.com>"]
repository = "https://github.com/mangocubed/website"

[build-dependencies]
chrono = "0.4.42"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-i18n = "0.5.0"
unic-langid = { version = "0.9.6", features = ["serde"] }
sdk = { git = "https://github.com/mangocubed/sdk.git", tag = "v0.0.0-alpha.21", features = [
    "app",
] }

[features]
default = ["web"]
web = ["dioxus/web", "sdk/web"]
server = ["dioxus/server", "sdk/server"]
